JNG-2510: update VM options for integration test